fixing activity 5 alignments

--- a/letter-sound-1/scss/layout/activity-5.scss
+++ b/letter-sound-1/scss/layout/activity-5.scss
@@ -19,9 +19,13 @@ $white: #ffffff;
   .floating-objects-container {
     position: absolute;
     top: 33rem;
-    left: 25rem;
+    justify-content: center;
+
     img {
-      margin-right: 10rem;
+      height: 25rem;
+      margin: 0 5rem;      
+      object-fit: contain;
+      width: 25rem;
      }
   }
 
